:bug: fix burren ALP breed
move Chamois colored to Alpine breed

--- a/notebooks/exploratory/0.23.0-bunop-burren_goats.ipynb
+++ b/notebooks/exploratory/0.23.0-bunop-burren_goats.ipynb
@@ -206,7 +206,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "081917f0da0540a99a37cb3a836ba101",
+       "model_id": "7ce92cdc564f433cba0a864db27324ac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -933,7 +933,7 @@
    "id": "c06ff0d8-8557-4f14-a3e2-f0a49baff129",
    "metadata": {},
    "source": [
-    "Ok, there's the 'CHA' code associated to a different code in database. Try to rename code in `samples` dataframe"
+    "Ok, there's the 'CHA' code associated to a *Chamois Coloured*, which is a Breed I know as *Alpine (Camosciata delle Alpi)*"
    ]
   },
   {
@@ -975,35 +975,35 @@
        "      <td>4</td>\n",
        "      <td>GFG01a</td>\n",
        "      <td>goat27</td>\n",
-       "      <td>CHM</td>\n",
+       "      <td>ALP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
        "      <td>4</td>\n",
        "      <td>GFG03</td>\n",
        "      <td>goat28</td>\n",
-       "      <td>CHM</td>\n",
+       "      <td>ALP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>28</th>\n",
        "      <td>4</td>\n",
        "      <td>GFG05a</td>\n",
        "      <td>goat29</td>\n",
-       "      <td>CHM</td>\n",
+       "      <td>ALP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>29</th>\n",
        "      <td>4</td>\n",
        "      <td>GFG25a</td>\n",
        "      <td>goat30</td>\n",
-       "      <td>CHM</td>\n",
+       "      <td>ALP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30</th>\n",
        "      <td>4</td>\n",
        "      <td>GFG26</td>\n",
        "      <td>goat31</td>\n",
-       "      <td>CHM</td>\n",
+       "      <td>ALP</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1011,11 +1011,11 @@
       ],
       "text/plain": [
        "    code_number original_id   alias code\n",
-       "26            4      GFG01a  goat27  CHM\n",
-       "27            4       GFG03  goat28  CHM\n",
-       "28            4      GFG05a  goat29  CHM\n",
-       "29            4      GFG25a  goat30  CHM\n",
-       "30            4       GFG26  goat31  CHM"
+       "26            4      GFG01a  goat27  ALP\n",
+       "27            4       GFG03  goat28  ALP\n",
+       "28            4      GFG05a  goat29  ALP\n",
+       "29            4      GFG25a  goat30  ALP\n",
+       "30            4       GFG26  goat31  ALP"
       ]
      },
      "execution_count": 18,
@@ -1024,8 +1024,8 @@
     }
    ],
    "source": [
-    "samples[\"code\"].replace({\"CHA\": \"CHM\"}, inplace=True)\n",
-    "samples[samples[\"code\"] == 'CHM'].head()"
+    "samples[\"code\"].replace({\"CHA\": \"ALP\"}, inplace=True)\n",
+    "samples[samples[\"code\"] == 'ALP'].head()"
    ]
   },
   {
@@ -1055,14 +1055,14 @@
       "Found code 'SAA': 'Saanen (SAA) Goat' for Burren 'Saanen'\n",
       "Found code 'SGB': 'Booted (SGB) Goat' for Burren 'Booted'\n",
       "Found code 'TOG': 'Toggenburg (TOG) Goat' for Burren 'Toggenburg'\n",
-      "Found code 'CHM': 'Chamois colored (CHM) Goat' for Burren 'Chamois colored'\n"
+      "Found code 'ALP': 'Alpine (Camosciata delle Alpi) (ALP) Goat' for Burren 'Alpine (Camosciata delle Alpi)'\n"
      ]
     }
    ],
    "source": [
     "if 'CHA' in code2breed:\n",
     "    del(code2breed['CHA'])\n",
-    "code2breed['CHM'] = 'Chamois colored'\n",
+    "code2breed['ALP'] = 'Alpine (Camosciata delle Alpi)'\n",
     "\n",
     "for code, name in code2breed.items():\n",
     "    count = Breed.objects.filter(code=code, species=\"Goat\").count()\n",
@@ -1374,8 +1374,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Chamois colored</td>\n",
-       "      <td>CHM</td>\n",
+       "      <td>Alpine (Camosciata delle Alpi)</td>\n",
+       "      <td>ALP</td>\n",
        "      <td>Brown with black markings on the head, legs  a...</td>\n",
        "      <td>short hair</td>\n",
        "      <td>horned or   polled</td>\n",
@@ -1401,19 +1401,26 @@
        "</div>"
       ],
       "text/plain": [
-       "             Breed Code                                         Coat color  \\\n",
-       "0        Appenzell  APP                                        Solid white   \n",
-       "1  Grisons striped  GST  Black with white limbs, tail and stripes on th...   \n",
-       "2      Tessin grey  TGR                               Silver to slate grey   \n",
-       "3  Chamois colored  CHM  Brown with black markings on the head, legs  a...   \n",
-       "4           Valais  VAG  Frontquarters black or brown, hindquarters  white   \n",
+       "                            Breed Code  \\\n",
+       "0                       Appenzell  APP   \n",
+       "1                 Grisons striped  GST   \n",
+       "2                     Tessin grey  TGR   \n",
+       "3  Alpine (Camosciata delle Alpi)  ALP   \n",
+       "4                          Valais  VAG   \n",
        "\n",
-       "                 Hair              Horns?          Size (♂/♀)  \\\n",
-       "0  medium-length hair                  no         85cm / 75cm   \n",
-       "1   short smooth hair                 yes         85cm / 75cm   \n",
-       "2                 NaN                 yes  75-85cm /  70-80cm   \n",
-       "3          short hair  horned or   polled         85cm / 75cm   \n",
-       "4      long fine hair                 yes         85cm / 75cm   \n",
+       "                                          Coat color                Hair  \\\n",
+       "0                                        Solid white  medium-length hair   \n",
+       "1  Black with white limbs, tail and stripes on th...   short smooth hair   \n",
+       "2                               Silver to slate grey                 NaN   \n",
+       "3  Brown with black markings on the head, legs  a...          short hair   \n",
+       "4  Frontquarters black or brown, hindquarters  white      long fine hair   \n",
+       "\n",
+       "               Horns?          Size (♂/♀)  \\\n",
+       "0                  no         85cm / 75cm   \n",
+       "1                 yes         85cm / 75cm   \n",
+       "2                 yes  75-85cm /  70-80cm   \n",
+       "3  horned or   polled         85cm / 75cm   \n",
+       "4                 yes         85cm / 75cm   \n",
        "\n",
        "                                         Performance   Main / Rare?  \\\n",
        "0  Milk production (592kg, 2.88% fat,    2.63% pr...           Rare   \n",
@@ -1527,8 +1534,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Chamois colored</td>\n",
-       "      <td>CHM</td>\n",
+       "      <td>Alpine (Camosciata delle Alpi)</td>\n",
+       "      <td>ALP</td>\n",
        "      <td>Brown with black markings on the head, legs  a...</td>\n",
        "      <td>short hair</td>\n",
        "      <td>horned or   polled</td>\n",
@@ -1554,19 +1561,26 @@
        "</div>"
       ],
       "text/plain": [
-       "             breed code                                         coat_color  \\\n",
-       "0        Appenzell  APP                                        Solid white   \n",
-       "1  Grisons striped  GST  Black with white limbs, tail and stripes on th...   \n",
-       "2      Tessin grey  TGR                               Silver to slate grey   \n",
-       "3  Chamois colored  CHM  Brown with black markings on the head, legs  a...   \n",
-       "4           Valais  VAG  Frontquarters black or brown, hindquarters  white   \n",
+       "                            breed code  \\\n",
+       "0                       Appenzell  APP   \n",
+       "1                 Grisons striped  GST   \n",
+       "2                     Tessin grey  TGR   \n",
+       "3  Alpine (Camosciata delle Alpi)  ALP   \n",
+       "4                          Valais  VAG   \n",
        "\n",
-       "                 hair               horns                size  \\\n",
-       "0  medium-length hair                  no         85cm / 75cm   \n",
-       "1   short smooth hair                 yes         85cm / 75cm   \n",
-       "2                 NaN                 yes  75-85cm /  70-80cm   \n",
-       "3          short hair  horned or   polled         85cm / 75cm   \n",
-       "4      long fine hair                 yes         85cm / 75cm   \n",
+       "                                          coat_color                hair  \\\n",
+       "0                                        Solid white  medium-length hair   \n",
+       "1  Black with white limbs, tail and stripes on th...   short smooth hair   \n",
+       "2                               Silver to slate grey                 NaN   \n",
+       "3  Brown with black markings on the head, legs  a...          short hair   \n",
+       "4  Frontquarters black or brown, hindquarters  white      long fine hair   \n",
+       "\n",
+       "                horns                size  \\\n",
+       "0                  no         85cm / 75cm   \n",
+       "1                 yes         85cm / 75cm   \n",
+       "2                 yes  75-85cm /  70-80cm   \n",
+       "3  horned or   polled         85cm / 75cm   \n",
+       "4                 yes         85cm / 75cm   \n",
        "\n",
        "                                         performance  rare  \\\n",
        "0  Milk production (592kg, 2.88% fat,    2.63% pr...  Rare   \n",
@@ -1686,8 +1700,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Chamois colored</td>\n",
-       "      <td>CHM</td>\n",
+       "      <td>Alpine (Camosciata delle Alpi)</td>\n",
+       "      <td>ALP</td>\n",
        "      <td>Brown with black markings on the head, legs  a...</td>\n",
        "      <td>short hair</td>\n",
        "      <td>horned or   polled</td>\n",
@@ -1717,19 +1731,26 @@
        "</div>"
       ],
       "text/plain": [
-       "             breed code                                         coat_color  \\\n",
-       "0        Appenzell  APP                                        Solid white   \n",
-       "1  Grisons striped  GST  Black with white limbs, tail and stripes on th...   \n",
-       "2      Tessin grey  TGR                               Silver to slate grey   \n",
-       "3  Chamois colored  CHM  Brown with black markings on the head, legs  a...   \n",
-       "4           Valais  VAG  Frontquarters black or brown, hindquarters  white   \n",
+       "                            breed code  \\\n",
+       "0                       Appenzell  APP   \n",
+       "1                 Grisons striped  GST   \n",
+       "2                     Tessin grey  TGR   \n",
+       "3  Alpine (Camosciata delle Alpi)  ALP   \n",
+       "4                          Valais  VAG   \n",
        "\n",
-       "                 hair               horns                size  \\\n",
-       "0  medium-length hair                  no         85cm / 75cm   \n",
-       "1   short smooth hair                 yes         85cm / 75cm   \n",
-       "2                 NaN                 yes  75-85cm /  70-80cm   \n",
-       "3          short hair  horned or   polled         85cm / 75cm   \n",
-       "4      long fine hair                 yes         85cm / 75cm   \n",
+       "                                          coat_color                hair  \\\n",
+       "0                                        Solid white  medium-length hair   \n",
+       "1  Black with white limbs, tail and stripes on th...   short smooth hair   \n",
+       "2                               Silver to slate grey                 NaN   \n",
+       "3  Brown with black markings on the head, legs  a...          short hair   \n",
+       "4  Frontquarters black or brown, hindquarters  white      long fine hair   \n",
+       "\n",
+       "                horns                size  \\\n",
+       "0                  no         85cm / 75cm   \n",
+       "1                 yes         85cm / 75cm   \n",
+       "2                 yes  75-85cm /  70-80cm   \n",
+       "3  horned or   polled         85cm / 75cm   \n",
+       "4                 yes         85cm / 75cm   \n",
        "\n",
        "                                         performance   rare  \\\n",
        "0  Milk production (592kg, 2.88% fat,    2.63% pr...   True   \n",
