:sparkles: filter burren goats
remove samples already present in SMARTER database

--- a/notebooks/exploratory/0.23.0-bunop-burren_goats.ipynb
+++ b/notebooks/exploratory/0.23.0-bunop-burren_goats.ipynb
@@ -124,7 +124,9 @@
        " 'doi_10.5061_dryad.q1cv6__v1/burren_phenotypes_fix.xlsx',\n",
        " 'doi_10.5061_dryad.q1cv6__v1/burren_samples_fix.xlsx',\n",
        " 'doi_10.5061_dryad.q1cv6__v1/goat_data2_dryad_fix.map',\n",
-       " 'doi_10.5061_dryad.q1cv6__v1/goat_data2_dryad_fix.ped']"
+       " 'doi_10.5061_dryad.q1cv6__v1/goat_data2_dryad_fix.ped',\n",
+       " 'doi_10.5061_dryad.q1cv6__v1/to_remove.csv',\n",
+       " 'doi_10.5061_dryad.q1cv6__v1/king.con']"
       ]
      },
      "execution_count": 4,
@@ -206,7 +208,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7ce92cdc564f433cba0a864db27324ac",
+       "model_id": "75c38ea2fa464cb2b97484f1e9d12007",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1291,6 +1293,222 @@
   },
   {
    "cell_type": "markdown",
+   "id": "74e357d2-c02e-4502-8e00-e36a08b47b98",
+   "metadata": {},
+   "source": [
+    "Ok, there are some samples that seems to be already in the SMARTER database: those samples where identified using [king](https://www.kingrelatedness.com/) software. Read those sample names from file:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "c6dee27a-ec4d-455a-9574-3c9e4ea3b041",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>goat27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>goat28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>goat29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>goat130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>goat131</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       ID2\n",
+       "0   goat27\n",
+       "1   goat28\n",
+       "2   goat29\n",
+       "3  goat130\n",
+       "4  goat131"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "to_remove = pd.read_csv(burren_dataset.working_dir / \"doi_10.5061_dryad.q1cv6__v1/to_remove.csv\", index_col=0)\n",
+    "to_remove.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97a4d810-d7bf-4081-93cd-74713edd1642",
+   "metadata": {},
+   "source": [
+    "Ok, now change index on sample table:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "6c05251a-43f3-4cd8-94cc-9d1992137699",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>code_number</th>\n",
+       "      <th>original_id</th>\n",
+       "      <th>code</th>\n",
+       "      <th>breed</th>\n",
+       "      <th>country</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>alias</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>goat1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>BST01</td>\n",
+       "      <td>GST</td>\n",
+       "      <td>Grisons striped</td>\n",
+       "      <td>Switzerland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>goat2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>BST02</td>\n",
+       "      <td>GST</td>\n",
+       "      <td>Grisons striped</td>\n",
+       "      <td>Switzerland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>goat3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>BST06</td>\n",
+       "      <td>GST</td>\n",
+       "      <td>Grisons striped</td>\n",
+       "      <td>Switzerland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>goat4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>BST07</td>\n",
+       "      <td>GST</td>\n",
+       "      <td>Grisons striped</td>\n",
+       "      <td>Switzerland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>goat5</th>\n",
+       "      <td>2</td>\n",
+       "      <td>BST13</td>\n",
+       "      <td>GST</td>\n",
+       "      <td>Grisons striped</td>\n",
+       "      <td>Switzerland</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       code_number original_id code            breed      country\n",
+       "alias                                                            \n",
+       "goat1            2       BST01  GST  Grisons striped  Switzerland\n",
+       "goat2            2       BST02  GST  Grisons striped  Switzerland\n",
+       "goat3            2       BST06  GST  Grisons striped  Switzerland\n",
+       "goat4            2       BST07  GST  Grisons striped  Switzerland\n",
+       "goat5            2       BST13  GST  Grisons striped  Switzerland"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "samples.set_index('alias', inplace=True)\n",
+    "samples.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36b13fc8-7f85-43eb-b0fe-93c88f35a6d2",
+   "metadata": {},
+   "source": [
+    "Now transform the *ID2* series into a list, then drop those indexes:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "c5aac1dc-606a-43f1-ac9b-1009163b6b75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered_samples = samples.drop(index=to_remove['ID2'].to_list())\n",
+    "filtered_samples.reset_index(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ad0c5a2f-b9ac-4400-96e2-9dcc5524c4fc",
    "metadata": {},
    "source": [
@@ -1299,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "d5acbf26-1b38-4ccc-bd07-1f3ff114b24a",
    "metadata": {},
    "outputs": [
@@ -1437,7 +1655,7 @@
        "4                                                NaN  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1459,7 +1677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "id": "8c4b1253-bc3b-4378-b2c7-d8e32aa0b503",
    "metadata": {},
    "outputs": [
@@ -1597,7 +1815,7 @@
        "4                                                NaN  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1617,7 +1835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "id": "16c60517-9e02-4eaf-a8a9-1c9a4c51b3e1",
    "metadata": {},
    "outputs": [
@@ -1767,7 +1985,7 @@
        "4                                                NaN      85cm        75cm  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1789,12 +2007,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "id": "b2e9ab80-4901-4754-9ba6-befa7477b2c1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "samples.to_excel(\"burren_samples_fix.xlsx\")\n",
+    "filtered_samples.to_excel(\"burren_samples_fix.xlsx\")\n",
     "phenotypes.to_excel(\"burren_phenotypes_fix.xlsx\")"
    ]
   },
@@ -1803,114 +2021,7 @@
    "id": "50d32d44-a6cc-4f8c-95a2-4d5fcc81a02c",
    "metadata": {},
    "source": [
-    "I need to update the FID in the plink files, cause otherwise I will not able to resolve breed-to-sample correspondance. Take the sample dataframe and change index relying on aliases:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "6fdd06a0-6599-45ae-a345-cffb3e3d6c96",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>code_number</th>\n",
-       "      <th>original_id</th>\n",
-       "      <th>code</th>\n",
-       "      <th>breed</th>\n",
-       "      <th>country</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>alias</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>goat1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>BST01</td>\n",
-       "      <td>GST</td>\n",
-       "      <td>Grisons striped</td>\n",
-       "      <td>Switzerland</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>goat2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>BST02</td>\n",
-       "      <td>GST</td>\n",
-       "      <td>Grisons striped</td>\n",
-       "      <td>Switzerland</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>goat3</th>\n",
-       "      <td>2</td>\n",
-       "      <td>BST06</td>\n",
-       "      <td>GST</td>\n",
-       "      <td>Grisons striped</td>\n",
-       "      <td>Switzerland</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>goat4</th>\n",
-       "      <td>2</td>\n",
-       "      <td>BST07</td>\n",
-       "      <td>GST</td>\n",
-       "      <td>Grisons striped</td>\n",
-       "      <td>Switzerland</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>goat5</th>\n",
-       "      <td>2</td>\n",
-       "      <td>BST13</td>\n",
-       "      <td>GST</td>\n",
-       "      <td>Grisons striped</td>\n",
-       "      <td>Switzerland</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       code_number original_id code            breed      country\n",
-       "alias                                                            \n",
-       "goat1            2       BST01  GST  Grisons striped  Switzerland\n",
-       "goat2            2       BST02  GST  Grisons striped  Switzerland\n",
-       "goat3            2       BST06  GST  Grisons striped  Switzerland\n",
-       "goat4            2       BST07  GST  Grisons striped  Switzerland\n",
-       "goat5            2       BST13  GST  Grisons striped  Switzerland"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "samples = samples.set_index(\"alias\")\n",
-    "samples.head()"
+    "I need to update the FID in the plink files, cause otherwise I will not able to resolve breed-to-sample correspondance:"
    ]
   },
   {
@@ -1923,7 +2034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "5c46c37d-1e2c-425f-8099-0bf2eaa0c04a",
    "metadata": {},
    "outputs": [],
