:sparkles: import goat data from cortellari et al

--- a/notebooks/exploratory/0.24.0-bunop-cortellari_goats.ipynb
+++ b/notebooks/exploratory/0.24.0-bunop-cortellari_goats.ipynb
@@ -121,7 +121,9 @@
        " 's41598-021-89900-2/41598_2021_89900_MOESM12_ESM.xlsx',\n",
        " 's41598-021-89900-2/41598_2021_89900_MOESM11_ESM.xlsx',\n",
        " 's41598-021-89900-2/41598_2021_89900_MOESM5_ESM.xlsx',\n",
-       " 's41598-021-89900-2/41598_2021_89900_MOESM1_ESM.tiff']"
+       " 's41598-021-89900-2/41598_2021_89900_MOESM1_ESM.tiff',\n",
+       " 's41598-021-89900-2/king.con',\n",
+       " 's41598-021-89900-2/to_remove.csv']"
       ]
      },
      "execution_count": 4,
@@ -203,7 +205,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "35090482ca9c461b832a51a4f8d5b7ea",
+       "model_id": "8c58b064f1eb497cadb5a7ab1dde33dd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1152,6 +1154,113 @@
   },
   {
    "cell_type": "markdown",
+   "id": "197a0298-9a49-47ba-a156-4000a492ee83",
+   "metadata": {},
+   "source": [
+    "Remove unused columns and add country"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "11cc0f08-a165-439c-ab24-a0a0ee582523",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>original_id</th>\n",
+       "      <th>fid</th>\n",
+       "      <th>code</th>\n",
+       "      <th>breed</th>\n",
+       "      <th>country</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ALP211</td>\n",
+       "      <td>ALP</td>\n",
+       "      <td>ALP</td>\n",
+       "      <td>Alpine (Camosciata delle Alpi)</td>\n",
+       "      <td>Italy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ALP212</td>\n",
+       "      <td>ALP</td>\n",
+       "      <td>ALP</td>\n",
+       "      <td>Alpine (Camosciata delle Alpi)</td>\n",
+       "      <td>Italy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ALP213</td>\n",
+       "      <td>ALP</td>\n",
+       "      <td>ALP</td>\n",
+       "      <td>Alpine (Camosciata delle Alpi)</td>\n",
+       "      <td>Italy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ALP214</td>\n",
+       "      <td>ALP</td>\n",
+       "      <td>ALP</td>\n",
+       "      <td>Alpine (Camosciata delle Alpi)</td>\n",
+       "      <td>Italy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ARG10</td>\n",
+       "      <td>ARG</td>\n",
+       "      <td>ARG</td>\n",
+       "      <td>Argentata</td>\n",
+       "      <td>Italy</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  original_id  fid code                           breed country\n",
+       "0      ALP211  ALP  ALP  Alpine (Camosciata delle Alpi)   Italy\n",
+       "1      ALP212  ALP  ALP  Alpine (Camosciata delle Alpi)   Italy\n",
+       "2      ALP213  ALP  ALP  Alpine (Camosciata delle Alpi)   Italy\n",
+       "3      ALP214  ALP  ALP  Alpine (Camosciata delle Alpi)   Italy\n",
+       "4       ARG10  ARG  ARG                       Argentata   Italy"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered_samples.drop([\"raw_dataset_count\", \"haplotype_sharing_count\", \"population_structure_count\", \"landscape_genomics_count\"], axis=1, inplace=True)\n",
+    "filtered_samples[\"country\"] = \"Italy\"\n",
+    "filtered_samples.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c6b91aaa-18d4-46f4-bc21-4c73adf227b0",
    "metadata": {},
    "source": [
@@ -1160,18 +1269,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "2bb41831-0d6b-4cde-b909-6a2da05aa42a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "filtered_samples.drop([\"raw_dataset_count\", \"haplotype_sharing_count\", \"population_structure_count\", \"landscape_genomics_count\"], axis=1).to_excel(\"cortellari_samples_fix.xlsx\")"
+    "filtered_samples.to_excel(\"cortellari_samples_fix.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "2be874a8-8178-44d8-8ca8-0fa3ba360f1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 523 entries, 0 to 522\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column       Non-Null Count  Dtype \n",
+      "---  ------       --------------  ----- \n",
+      " 0   original_id  523 non-null    object\n",
+      " 1   fid          523 non-null    object\n",
+      " 2   code         523 non-null    object\n",
+      " 3   breed        523 non-null    object\n",
+      " 4   country      523 non-null    object\n",
+      "dtypes: object(5)\n",
+      "memory usage: 20.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "filtered_samples.info()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2be874a8-8178-44d8-8ca8-0fa3ba360f1b",
+   "id": "24416fb9-db63-4c32-a593-d72325ca46ee",
    "metadata": {},
    "outputs": [],
    "source": []
