--- a/notebooks/exploratory/0.15.0-bunop-check_sheep_coordinates.ipynb
+++ b/notebooks/exploratory/0.15.0-bunop-check_sheep_coordinates.ipynb
@@ -206,7 +206,7 @@
     "selected_oar3 = random.sample(mismatches_oar3, 20)\n",
     "\n",
     "# get rs_id from selected items\n",
-    "selected_rsID = [variant.rs_id for (record, variant) in selected_oar3 if variant.rs_id]\n",
+    "selected_rsID = [\",\".join(variant.rs_id) for (record, variant) in selected_oar3 if variant.rs_id]\n",
     "\n",
     "# get informations from ensembl\n",
     "result_oar3 = ensRest.getVariationByMultipleIds(ids=selected_rsID, species=\"ovis_aries\")"
@@ -250,7 +250,7 @@
        "      <th>entry</th>\n",
        "      <th>chrom</th>\n",
        "      <th>pos</th>\n",
-       "      <th>rs_id</th>\n",
+       "      <th>rs_ids</th>\n",
        "      <th>smarter_chrom</th>\n",
        "      <th>smarter_pos</th>\n",
        "      <th>ensembl_chrom</th>\n",
@@ -450,11 +450,11 @@
        "      <td>OAR5_82642729.1</td>\n",
        "      <td>5</td>\n",
        "      <td>75057935</td>\n",
-       "      <td>rs592116976</td>\n",
+       "      <td>rs412020545,rs592116976</td>\n",
        "      <td>5</td>\n",
        "      <td>75057934</td>\n",
-       "      <td>5</td>\n",
-       "      <td>75057935.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
@@ -483,49 +483,49 @@
        "</div>"
       ],
       "text/plain": [
-       "               entry chrom        pos        rs_id smarter_chrom  smarter_pos  \\\n",
-       "0           s75780.1    27   54216498  rs161681000             X     54216498   \n",
-       "1   OAR2_192839652.1     2  181989267         None             0            0   \n",
-       "2           s45548.1     1  105291839  rs428119865             0            0   \n",
-       "3    OAR7_95892509.1     7   88177594         None             0            0   \n",
-       "4    OAR6_91684840.1     6   83902199         None             0            0   \n",
-       "5   OAR5_100812608.1     5   92563424  rs423024283             0            0   \n",
-       "6    OAR3_68238991.1     3   64585315  rs430484597             0            0   \n",
-       "7    OARX_95154058.1    27  135106137  rs401042801             X    135106137   \n",
-       "8   OAR2_159324874.1     2  150138196  rs400029026             0            0   \n",
-       "9   OARX_114100188.1    27   92387372  rs422929969             X     92387372   \n",
-       "10    DU366503_110.1    24   23776632   rs55631659             0            0   \n",
-       "11          s43937.1     2   75425598         None             0            0   \n",
-       "12   OARX_25080774.1    27   13811086  rs401393945             X     13811086   \n",
-       "13  OAR15_74403454.1    15   68744219  rs410567755             0            0   \n",
-       "14  OAR1_141263582.1     1  130444362  rs413204348             0            0   \n",
-       "15  OAR1_135119972.1     1  124683035  rs592951329             0            0   \n",
-       "16  OAR2_113088690.1     2  105167832  rs160131484             0            0   \n",
-       "17   OAR5_82642729.1     5   75057935  rs592116976             5     75057934   \n",
-       "18   OAR6_35606910.1     6   31577636         None             0            0   \n",
-       "19    DU438581_363.1    21   16195822   rs55628775             0            0   \n",
+       "               entry chrom        pos                   rs_ids smarter_chrom  \\\n",
+       "0           s75780.1    27   54216498              rs161681000             X   \n",
+       "1   OAR2_192839652.1     2  181989267                     None             0   \n",
+       "2           s45548.1     1  105291839              rs428119865             0   \n",
+       "3    OAR7_95892509.1     7   88177594                     None             0   \n",
+       "4    OAR6_91684840.1     6   83902199                     None             0   \n",
+       "5   OAR5_100812608.1     5   92563424              rs423024283             0   \n",
+       "6    OAR3_68238991.1     3   64585315              rs430484597             0   \n",
+       "7    OARX_95154058.1    27  135106137              rs401042801             X   \n",
+       "8   OAR2_159324874.1     2  150138196              rs400029026             0   \n",
+       "9   OARX_114100188.1    27   92387372              rs422929969             X   \n",
+       "10    DU366503_110.1    24   23776632               rs55631659             0   \n",
+       "11          s43937.1     2   75425598                     None             0   \n",
+       "12   OARX_25080774.1    27   13811086              rs401393945             X   \n",
+       "13  OAR15_74403454.1    15   68744219              rs410567755             0   \n",
+       "14  OAR1_141263582.1     1  130444362              rs413204348             0   \n",
+       "15  OAR1_135119972.1     1  124683035              rs592951329             0   \n",
+       "16  OAR2_113088690.1     2  105167832              rs160131484             0   \n",
+       "17   OAR5_82642729.1     5   75057935  rs412020545,rs592116976             5   \n",
+       "18   OAR6_35606910.1     6   31577636                     None             0   \n",
+       "19    DU438581_363.1    21   16195822               rs55628775             0   \n",
        "\n",
-       "   ensembl_chrom  ensembl_pos  \n",
-       "0              X   54216498.0  \n",
-       "1           None          NaN  \n",
-       "2              1  105291839.0  \n",
-       "3           None          NaN  \n",
-       "4           None          NaN  \n",
-       "5              5   92563424.0  \n",
-       "6              3   64585315.0  \n",
-       "7              X  135106137.0  \n",
-       "8              2  150138196.0  \n",
-       "9              X   92387372.0  \n",
-       "10            24   23776632.0  \n",
-       "11          None          NaN  \n",
-       "12             X   13811086.0  \n",
-       "13            15   68744219.0  \n",
-       "14             1  130444362.0  \n",
-       "15             1  124683035.0  \n",
-       "16             2  105167832.0  \n",
-       "17             5   75057935.0  \n",
-       "18          None          NaN  \n",
-       "19            21   16195822.0  "
+       "    smarter_pos ensembl_chrom  ensembl_pos  \n",
+       "0      54216498             X   54216498.0  \n",
+       "1             0          None          NaN  \n",
+       "2             0             1  105291839.0  \n",
+       "3             0          None          NaN  \n",
+       "4             0          None          NaN  \n",
+       "5             0             5   92563424.0  \n",
+       "6             0             3   64585315.0  \n",
+       "7     135106137             X  135106137.0  \n",
+       "8             0             2  150138196.0  \n",
+       "9      92387372             X   92387372.0  \n",
+       "10            0            24   23776632.0  \n",
+       "11            0          None          NaN  \n",
+       "12     13811086             X   13811086.0  \n",
+       "13            0            15   68744219.0  \n",
+       "14            0             1  130444362.0  \n",
+       "15            0             1  124683035.0  \n",
+       "16            0             2  105167832.0  \n",
+       "17     75057934          None          NaN  \n",
+       "18            0          None          NaN  \n",
+       "19            0            21   16195822.0  "
       ]
      },
      "execution_count": 6,
@@ -538,21 +538,37 @@
     "    data = defaultdict(list)\n",
     "\n",
     "    for record, variant in selected:\n",
+    "        try:\n",
+    "            # rs_id is now a list of rs_ids\n",
+    "            rs_ids = \",\".join(variant.rs_id)\n",
+    "            \n",
+    "        except TypeError as exc:\n",
+    "            rs_ids = None\n",
+    "        \n",
     "        data[\"entry\"].append(record.entry)\n",
     "        data[\"chrom\"].append(record.chrom)\n",
     "        data[\"pos\"].append(record.pos)\n",
-    "        data[\"rs_id\"].append(variant.rs_id)\n",
+    "        data[\"rs_ids\"].append(rs_ids)\n",
     "        data[\"smarter_chrom\"].append(variant.locations[0].chrom)\n",
     "        data[\"smarter_pos\"].append(variant.locations[0].position)\n",
     "\n",
     "        if variant.rs_id:\n",
-    "            data[\"ensembl_chrom\"].append(result[variant.rs_id]['mappings'][0]['seq_region_name'])\n",
-    "            data[\"ensembl_pos\"].append(result[variant.rs_id]['mappings'][0]['start'])\n",
-    "\n",
-    "        else:\n",
+    "            found = False\n",
+    "            \n",
+    "            for rs_id in variant.rs_id:\n",
+    "                if rs_id in result:\n",
+    "                    found = True\n",
+    "                    \n",
+    "                    data[\"ensembl_chrom\"].append(result[rs_id]['mappings'][0]['seq_region_name'])\n",
+    "                    data[\"ensembl_pos\"].append(result[rs_id]['mappings'][0]['start'])\n",
+    "                    \n",
+    "                    # limit to first results\n",
+    "                    break\n",
+    "                    \n",
+    "        if not found or not variant.rs_id:\n",
     "            data[\"ensembl_chrom\"].append(None)\n",
     "            data[\"ensembl_pos\"].append(None)\n",
-    "\n",
+    "            \n",
     "    return pandas.DataFrame.from_dict(data)\n",
     "\n",
     "to_pd_table(selected_oar3, result_oar3)"
@@ -701,7 +717,7 @@
        "      <td>s44901.1</td>\n",
        "      <td>27</td>\n",
        "      <td>53433728</td>\n",
-       "      <td>rs405378494</td>\n",
+       "      <td>[rs405378494]</td>\n",
        "      <td>X</td>\n",
        "      <td>53433728</td>\n",
        "    </tr>\n",
@@ -710,7 +726,7 @@
        "      <td>OAR2_192378013.1</td>\n",
        "      <td>2</td>\n",
        "      <td>181554086</td>\n",
-       "      <td>rs425938300</td>\n",
+       "      <td>[rs425938300]</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -728,7 +744,7 @@
        "      <td>s53156.1</td>\n",
        "      <td>7</td>\n",
        "      <td>86529139</td>\n",
-       "      <td>rs415532834</td>\n",
+       "      <td>[rs415532834]</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -737,7 +753,7 @@
        "      <td>OAR6_90124627.1</td>\n",
        "      <td>6</td>\n",
        "      <td>82235250</td>\n",
-       "      <td>rs414248683</td>\n",
+       "      <td>[rs414248683]</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -755,7 +771,7 @@
        "      <td>OAR3_67623052.1</td>\n",
        "      <td>3</td>\n",
        "      <td>63888691</td>\n",
-       "      <td>rs420144331</td>\n",
+       "      <td>[rs420144331]</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -764,7 +780,7 @@
        "      <td>OARX_94177459_X.1</td>\n",
        "      <td>27</td>\n",
        "      <td>134081476</td>\n",
-       "      <td>rs408436026</td>\n",
+       "      <td>[rs408436026]</td>\n",
        "      <td>X</td>\n",
        "      <td>134081476</td>\n",
        "    </tr>\n",
@@ -782,7 +798,7 @@
        "      <td>OARX_110992791.1</td>\n",
        "      <td>27</td>\n",
        "      <td>91633123</td>\n",
-       "      <td>rs416320037</td>\n",
+       "      <td>[rs416320037]</td>\n",
        "      <td>X</td>\n",
        "      <td>91633123</td>\n",
        "    </tr>\n",
@@ -791,7 +807,7 @@
        "      <td>OAR24_16542292.1</td>\n",
        "      <td>24</td>\n",
        "      <td>14979132</td>\n",
-       "      <td>rs418689478</td>\n",
+       "      <td>[rs418689478]</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -809,7 +825,7 @@
        "      <td>OARX_19707716.1</td>\n",
        "      <td>27</td>\n",
        "      <td>12565594</td>\n",
-       "      <td>rs418210509</td>\n",
+       "      <td>[rs418210509]</td>\n",
        "      <td>X</td>\n",
        "      <td>12565594</td>\n",
        "    </tr>\n",
@@ -818,7 +834,7 @@
        "      <td>s54590.1</td>\n",
        "      <td>15</td>\n",
        "      <td>65124259</td>\n",
-       "      <td>rs409282773</td>\n",
+       "      <td>[rs409282773]</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -827,7 +843,7 @@
        "      <td>OAR1_141263582.1</td>\n",
        "      <td>1</td>\n",
        "      <td>130283852</td>\n",
-       "      <td>rs413204348</td>\n",
+       "      <td>[rs413204348]</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -836,7 +852,7 @@
        "      <td>OAR1_134551641.1</td>\n",
        "      <td>1</td>\n",
        "      <td>123993733</td>\n",
-       "      <td>rs399063838</td>\n",
+       "      <td>[rs399063838]</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -863,7 +879,7 @@
        "      <td>OAR6_34189736.1</td>\n",
        "      <td>6</td>\n",
        "      <td>30270116</td>\n",
-       "      <td>rs427635225</td>\n",
+       "      <td>[rs427635225]</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -872,7 +888,7 @@
        "      <td>OAR21_12752894.1</td>\n",
        "      <td>21</td>\n",
        "      <td>11150475</td>\n",
-       "      <td>rs403193973</td>\n",
+       "      <td>[rs403193973]</td>\n",
        "      <td>21</td>\n",
        "      <td>11150476</td>\n",
        "    </tr>\n",
@@ -881,27 +897,49 @@
        "</div>"
       ],
       "text/plain": [
-       "                entry chrom        pos        rs_id smarter_chrom  smarter_pos\n",
-       "0            s44901.1    27   53433728  rs405378494             X     53433728\n",
-       "1    OAR2_192378013.1     2  181554086  rs425938300             0            0\n",
-       "2            s31596.1     1  104766281         None             0            0\n",
-       "3            s53156.1     7   86529139  rs415532834             0            0\n",
-       "4     OAR6_90124627.1     6   82235250  rs414248683             0            0\n",
-       "5    OAR5_100348132.1     5   92019418         None             0            0\n",
-       "6     OAR3_67623052.1     3   63888691  rs420144331             0            0\n",
-       "7   OARX_94177459_X.1    27  134081476  rs408436026             X    134081476\n",
-       "8            s37790.1     2  148410633         None             0            0\n",
-       "9    OARX_110992791.1    27   91633123  rs416320037             X     91633123\n",
-       "10   OAR24_16542292.1    24   14979132  rs418689478             0            0\n",
-       "11    OAR2_79984976.1     2   75059104         None             0            0\n",
-       "12    OARX_19707716.1    27   12565594  rs418210509             X     12565594\n",
-       "13           s54590.1    15   65124259  rs409282773             0            0\n",
-       "14   OAR1_141263582.1     1  130283852  rs413204348             0            0\n",
-       "15   OAR1_134551641.1     1  123993733  rs399063838             0            0\n",
-       "16   OAR2_112165500.1     2  104343059         None             0            0\n",
-       "17    OAR5_79621237.1     5   72357238         None             0            0\n",
-       "18    OAR6_34189736.1     6   30270116  rs427635225             0            0\n",
-       "19   OAR21_12752894.1    21   11150475  rs403193973            21     11150476"
+       "                entry chrom        pos          rs_id smarter_chrom  \\\n",
+       "0            s44901.1    27   53433728  [rs405378494]             X   \n",
+       "1    OAR2_192378013.1     2  181554086  [rs425938300]             0   \n",
+       "2            s31596.1     1  104766281           None             0   \n",
+       "3            s53156.1     7   86529139  [rs415532834]             0   \n",
+       "4     OAR6_90124627.1     6   82235250  [rs414248683]             0   \n",
+       "5    OAR5_100348132.1     5   92019418           None             0   \n",
+       "6     OAR3_67623052.1     3   63888691  [rs420144331]             0   \n",
+       "7   OARX_94177459_X.1    27  134081476  [rs408436026]             X   \n",
+       "8            s37790.1     2  148410633           None             0   \n",
+       "9    OARX_110992791.1    27   91633123  [rs416320037]             X   \n",
+       "10   OAR24_16542292.1    24   14979132  [rs418689478]             0   \n",
+       "11    OAR2_79984976.1     2   75059104           None             0   \n",
+       "12    OARX_19707716.1    27   12565594  [rs418210509]             X   \n",
+       "13           s54590.1    15   65124259  [rs409282773]             0   \n",
+       "14   OAR1_141263582.1     1  130283852  [rs413204348]             0   \n",
+       "15   OAR1_134551641.1     1  123993733  [rs399063838]             0   \n",
+       "16   OAR2_112165500.1     2  104343059           None             0   \n",
+       "17    OAR5_79621237.1     5   72357238           None             0   \n",
+       "18    OAR6_34189736.1     6   30270116  [rs427635225]             0   \n",
+       "19   OAR21_12752894.1    21   11150475  [rs403193973]            21   \n",
+       "\n",
+       "    smarter_pos  \n",
+       "0      53433728  \n",
+       "1             0  \n",
+       "2             0  \n",
+       "3             0  \n",
+       "4             0  \n",
+       "5             0  \n",
+       "6             0  \n",
+       "7     134081476  \n",
+       "8             0  \n",
+       "9      91633123  \n",
+       "10            0  \n",
+       "11            0  \n",
+       "12     12565594  \n",
+       "13            0  \n",
+       "14            0  \n",
+       "15            0  \n",
+       "16            0  \n",
+       "17            0  \n",
+       "18            0  \n",
+       "19     11150476  "
       ]
      },
      "execution_count": 11,
